--- a/index.html
+++ b/index.html
@@ -693,11 +693,6 @@
     <!-- Header -->
     <header>
         <div class="logo">CONFRONTER</div>
-        <div class="theme-switcher">
-            <div class="theme-btn cyberpunk active" data-theme="default"></div>
-            <div class="theme-btn matrix" data-theme="matrix"></div>
-            <div class="theme-btn quantum" data-theme="quantum"></div>
-            <div class="theme-btn hacker" data-theme="hacker"></div>
         </div>
     </header>
 
@@ -705,7 +700,7 @@
     <section class="hero">
         <h1 class="typewriter" id="typewriter"></h1>
         <div class="avatar-container floating pulse-glow">
-            <img src="http://ibb.co/kg9nH0Kr.jpeg" alt="Confronter">
+            <img src="http://ibb.co/kg9nH0Kr" alt="Confronter">
             <div class="particles" id="particles"></div>
         </div>
         <p>AI & Quantum Developer | Tech Innovator | Dj Afro Founder</p>
@@ -714,9 +709,9 @@
     
             <!-- Project 1 -->
             <div class="project-card" data-voice="DJ AFRO MOVIES HD CHANNEL- Best entertainment ever">
-                <div class="project-image" style="background-image: url('http://ibb.co/JWy3fgkK.jpeg');"></div>
+                <div class="project-image" style="background-image: url('http://ibb.co/JWy3fgkK');"></div>
                 <div class="project-content">
-                    <h3 class="project-title">BWM XMD Chat</h3>
+                    <h3 class="project-title">DJ AFRO HD</h3>
                     <p class="project-desc">Advanced AI chatting platform with quantum encryption and neural response systems.</p>
                     <a href="https://t.me/djafromoviesbest" class="project-btn">Enter Portal</a>
                 </div>
