--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
 
     <!-- Hero Section -->
     <section class="hero">
-        <h1 class="typewriter" id="typewriter"></h1>
+        <h1 class="sans-serif" id="sans-serif"></h1>
         <div class="avatar-container floating pulse-glow">
             <img src="http://ibb.co/kg9nH0Kr" alt="Confronter">
             <div class="particles" id="particles"></div>
