--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head>CONFRONTER
+  <style>
                 :root {
             --primary: #00f7ff;
             --secondary: #ff00f7;
