--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>CONFRONTER
+<head>    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ibrahim Adams | AI & Quantum Developer | BWM XMD Founder</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
                 :root {
             --primary: #00f7ff;
@@ -907,7 +910,7 @@
 
     <script>
         // Typewriter Effect
-        const typewriterElement = document.getElementById('typewriter');
+        const sansElement = document.getElementById('typewriter');
         const text = "Franklin Munguti | AI &  Developer | Founder";
         let i = 0;
 
