--- a/index.html
+++ b/index.html
@@ -694,7 +694,9 @@
         <div class="logo">CONFRONTER</div>
         </div>
     </header>
-
+<body>✔︎✔︎FOLLOWERS
+     ✔︎✔︎BOTS
+    ✔︎✔︎BILLING</body>
     <!-- Hero Section -->
 
 
