--- a/index.html
+++ b/index.html
@@ -701,7 +701,8 @@
     <body>♡Am online</body>
     <!-- Hero Section -->
 
-
+<h2 class="section-title">1.𝐒𝐨𝐜𝐢𝐚𝐥 𝐦𝐞𝐝𝐢𝐚 𝐠𝐚𝐢𝐧𝐬</h2>
+    <h2 class="section-title">2.𝐅𝐨𝐫𝐞𝐢𝐠𝐧 𝐧𝐮𝐦𝐛𝐞𝐫𝐬</h2>
     <!-- Social Hub -->
     <section class="social-hub">
         <h2 class="section-title">𝐂𝐨𝐧𝐟𝐫𝐨𝐧𝐭𝐞𝐫 𝐜𝐨𝐧𝐧𝐞𝐜𝐭𝐢𝐨𝐧 𝐇𝐮𝐛</h2>
