--- a/index.html
+++ b/index.html
@@ -694,15 +694,16 @@
         <div class="logo">CONFRONTER</div>
         </div>
     </header>
-<body>✔︎✔︎FOLLOWERS
-     ✔︎✔︎BOTS
-    ✔︎✔︎BILLING</body>
+<body>
 
     <body>♡Am online</body>
     <!-- Hero Section -->
 
-<h2 class="section-title">1.𝐒𝐨𝐜𝐢𝐚𝐥 𝐦𝐞𝐝𝐢𝐚 𝐠𝐚𝐢𝐧𝐬</h2>
-    <h2 class="section-title">2.𝐅𝐨𝐫𝐞𝐢𝐠𝐧 𝐧𝐮𝐦𝐛𝐞𝐫𝐬</h2>
+<h2 class="section-title">1.𝘚𝘰𝘤𝘪𝘢𝘭 𝘮𝘦𝘥𝘪𝘢 𝘨𝘢𝘪𝘯𝘴💥</h2>
+    <h2 class="section-title">2.𝘍𝘰𝘳𝘦𝘪𝘨𝘯 𝘯𝘶𝘮𝘣𝘦𝘳𝘴🇬🇧</h2>
+  <h2 class="section-title">3.𝘞𝘩𝘢𝘵𝘴𝘢𝘱𝘱 𝘣𝘰𝘵𝘴🤖</h2>  
+   <h2 class="section-title">4.𝘏𝘦𝘳𝘰𝘬𝘶 𝘣𝘪𝘭𝘭𝘪𝘯𝘨💳</h2>
+    <h2 class="section-title">5.𝘞𝘦𝘣 𝘥𝘦𝘷𝘦𝘭𝘰𝘱𝘮𝘦𝘯𝘵🌐</h2>
     <!-- Social Hub -->
     <section class="social-hub">
         <h2 class="section-title">𝐂𝐨𝐧𝐟𝐫𝐨𝐧𝐭𝐞𝐫 𝐜𝐨𝐧𝐧𝐞𝐜𝐭𝐢𝐨𝐧 𝐇𝐮𝐛</h2>
