--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ibrahim Adams | AI & Quantum Developer | BWM XMD Founder</title>
+    <title>𝐂𝐨𝐦𝐟𝐫𝐨𝐧𝐭𝐞𝐫 | 𝐃𝐞𝐚𝐝𝐩𝐨𝐨𝐥 𝐃𝐞𝐯𝐞𝐥𝐨𝐩𝐞𝐫 | 2025-2090</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
                 :root {
@@ -699,13 +699,13 @@
     <body>♡𝘼𝙢 𝙤𝙣𝙡𝙞𝙣𝙚 𝙟𝙪𝙨𝙩 𝙧𝙚𝙖𝙘𝙝 𝙢𝙚</body>
     <!-- Hero Section -->
 
-     <h2 class="section-title">1.𝘚𝘰𝘤𝘪𝘢𝘭 𝘮𝘦𝘥𝘪𝘢 𝘨𝘢𝘪𝘯𝘴💥</h2>
-     <h2 class="section-title">2.𝘍𝘰𝘳𝘦𝘪𝘨𝘯 𝘯𝘶𝘮𝘣𝘦𝘳𝘴🇬🇧[ѕтαятιиg 200кѕн]</h2>
-     <h2 class="section-title">3.𝘞𝘩𝘢𝘵𝘴𝘢𝘱𝘱 𝘣𝘰𝘵𝘴🤖[ѕтαятιиg 150кѕн]</h2>  
-     <h2 class="section-title">4.𝘏𝘦𝘳𝘰𝘬𝘶 𝘣𝘪𝘭𝘭𝘪𝘯𝘨💳[кѕн 350]</h2>
-     <h2 class="section-title">5.𝘞𝘦𝘣 𝘥𝘦𝘷𝘦𝘭𝘰𝘱𝘮𝘦𝘯𝘵🌐</h2>
+    <h2 class="section-title">1.𝘚𝘰𝘤𝘪𝘢𝘭 𝘮𝘦𝘥𝘪𝘢 𝘨𝘢𝘪𝘯𝘴💥[𝖊𝖌 𝖙𝖎𝖐𝖙𝖔𝖐,𝖎𝖌,𝖑𝖎𝖐𝖊𝖘,𝖋𝖔𝖑𝖑𝖔𝖜𝖊𝖗𝖘]</h2>
+     <h2 class="section-title">2.𝘍𝘰𝘳𝘦𝘪𝘨𝘯 𝘯𝘶𝘮𝘣𝘦𝘳𝘴🇬🇧[𝖘𝖙𝖆𝖗𝖙𝖎𝖓𝖌 200кѕн]</h2>
+    <h2 class="section-title">3.𝘞𝘩𝘢𝘵𝘴𝘢𝘱𝘱 𝘣𝘰𝘵𝘴🤖[𝖘𝖙𝖆𝖗𝖙𝖎𝖓𝖌 150кѕн]</h2>  
+     <h2 class="section-title">4.𝘏𝘦𝘳𝘰𝘬𝘶 𝘣𝘪𝘭𝘭𝘪𝘯𝘨💳[𝖐𝖘𝖍 350]</h2>
+    <h2 class="section-title">5.𝘞𝘦𝘣 𝘥𝘦𝘷𝘦𝘭𝘰𝘱𝘮𝘦𝘯𝘵🌐</h2>
      <h2 class="section-title">6.𝘙𝘦𝘵𝘳𝘪𝘦𝘷𝘪𝘯𝘨 𝘐𝘨,𝘍𝘣,𝘛𝘪𝘬𝘵𝘰𝘬 𝘢𝘤𝘤𝘰𝘶𝘯𝘵💻</h2>
-     <h2 class="section-title">7.𝘞𝘢𝘯𝘵 𝘵𝘰 𝘣𝘦 𝘥𝘦𝘱𝘭𝘰𝘺𝘦𝘳/𝘋𝘦𝘷𝘦𝘭𝘰𝘱𝘦𝘳 𝘩𝘪𝘵 𝘮𝘦📲</h2>
+    <h2 class="section-title">7.𝘞𝘢𝘯𝘵 𝘵𝘰 𝘣𝘦 𝘥𝘦𝘱𝘭𝘰𝘺𝘦𝘳/𝘋𝘦𝘷𝘦𝘭𝘰𝘱𝘦𝘳 𝘩𝘪𝘵 𝘮𝘦📲</h2>
      <h2 class="section-title">8.мαиу мσяє ѕєяνι¢єѕ•••👋</h2>
     <!-- Social Hub -->
     <section class="social-hub">
