--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@
     <h2 class="section-title">1.𝘚𝘰𝘤𝘪𝘢𝘭 𝘮𝘦𝘥𝘪𝘢 𝘨𝘢𝘪𝘯𝘴💥[𝖙𝖎𝖐𝖙𝖔𝖐,𝖎𝖌,𝖑𝖎𝖐𝖊𝖘,𝖋𝖔𝖑𝖑𝖔𝖜𝖊𝖗𝖘••]</h2>
      <h2 class="section-title">2.𝘍𝘰𝘳𝘦𝘪𝘨𝘯 𝘯𝘶𝘮𝘣𝘦𝘳𝘴🇬🇧[𝖘𝖙𝖆𝖗𝖙𝖎𝖓𝖌 200𝖐𝖘𝖍]</h2>
     <h2 class="section-title">3.𝘞𝘩𝘢𝘵𝘴𝘢𝘱𝘱 𝘣𝘰𝘵𝘴🤖[𝖘𝖙𝖆𝖗𝖙𝖎𝖓𝖌 150𝖐𝖘𝖍]</h2>  
-     <h2 class="section-title">4.𝘏𝘦𝘳𝘰𝘬𝘶 𝘣𝘪𝘭𝘭𝘪𝘯𝘨💳[𝖐𝖘𝖍 350]</h2>
+     <h2 class="section-title">4.𝘏𝘦𝘳𝘰𝘬𝘶 𝘣𝘪𝘭𝘭𝘪𝘯𝘨💳[𝖘𝖙𝖆𝖗𝖙𝖎𝖓𝖌 350𝖐𝖘𝖍]</h2>
     <h2 class="section-title">5.𝘞𝘦𝘣 𝘥𝘦𝘷𝘦𝘭𝘰𝘱𝘮𝘦𝘯𝘵🌐</h2>
      <h2 class="section-title">6.𝘙𝘦𝘵𝘳𝘪𝘦𝘷𝘪𝘯𝘨 𝘐𝘨,𝘍𝘣,𝘛𝘪𝘬𝘵𝘰𝘬 𝘢𝘤𝘤𝘰𝘶𝘯𝘵💻</h2>
     <h2 class="section-title">7.𝘞𝘢𝘯𝘵 𝘵𝘰 𝘣𝘦 𝘥𝘦𝘱𝘭𝘰𝘺𝘦𝘳/𝘋𝘦𝘷𝘦𝘭𝘰𝘱𝘦𝘳 𝘩𝘪𝘵 𝘮𝘦📲</h2>
