--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>    <meta charset="UTF-8">
@@ -703,18 +702,20 @@
      <h2 class="section-title">2.𝘍𝘰𝘳𝘦𝘪𝘨𝘯 𝘯𝘶𝘮𝘣𝘦𝘳𝘴🇬🇧[𝖘𝖙𝖆𝖗𝖙𝖎𝖓𝖌 200𝖐𝖘𝖍]</h2>
     <h2 class="section-title">3.𝘞𝘩𝘢𝘵𝘴𝘢𝘱𝘱 𝘣𝘰𝘵𝘴🤖[𝖘𝖙𝖆𝖗𝖙𝖎𝖓𝖌 150𝖐𝖘𝖍]</h2>  
      <h2 class="section-title">4.𝘏𝘦𝘳𝘰𝘬𝘶 𝘣𝘪𝘭𝘭𝘪𝘯𝘨💳[𝖘𝖙𝖆𝖗𝖙𝖎𝖓𝖌 350𝖐𝖘𝖍]</h2>
-    <h2 class="section-title">5.𝘞𝘦𝘣 𝘥𝘦𝘷𝘦𝘭𝘰𝘱𝘮𝘦𝘯𝘵🌐</h2>
-     <h2 class="section-title">6.𝘙𝘦𝘵𝘳𝘪𝘦𝘷𝘪𝘯𝘨 𝘐𝘨,𝘍𝘣,𝘛𝘪𝘬𝘵𝘰𝘬 𝘢𝘤𝘤𝘰𝘶𝘯𝘵💻</h2>
+    <h2 class="section-title">5.𝘞𝘦𝘣 𝘥𝘦𝘷𝘦𝘭𝘰𝘱𝘮𝘦𝘯𝘵🌐[𝕾𝖙𝖆𝖗𝖙𝖓𝖌 480𝖐𝖘𝖍]</h2>
+     <h2 class="section-title">6.𝘙𝘦𝘵𝘳𝘪𝘦𝘷𝘪𝘯𝘨 𝘐𝘨,𝘍𝘣,𝘞𝘩𝘢𝘵𝘴𝘢𝘱,𝘛𝘦𝘭𝘦𝘨𝘳𝘢𝘮,𝘛𝘪𝘬𝘵𝘰𝘬 𝘢𝘤𝘤𝘰𝘶𝘯𝘵💻</h2>
     <h2 class="section-title">7.𝘞𝘢𝘯𝘵 𝘵𝘰 𝘣𝘦 𝘥𝘦𝘱𝘭𝘰𝘺𝘦𝘳/𝘋𝘦𝘷𝘦𝘭𝘰𝘱𝘦𝘳 𝘩𝘪𝘵 𝘮𝘦📲</h2>
-     <h2 class="section-title">8.мαиу мσяє ѕєяνι¢єѕ•••👋</h2>
+    <h2 class="section-title">8.𝘕𝘦𝘵𝘧𝘭𝘪𝘹 𝘱𝘳𝘦𝘮𝘪𝘶𝘮,𝘢𝘭𝘭 𝘢𝘱𝘱𝘴⌛[𝕾𝖙𝖆𝖗𝖙𝖎𝖓𝖌 100𝖐𝖘𝖍]</h2>
+    <h2 class="section-title">9.𝘓𝘦𝘢𝘳𝘯 𝘕𝘦𝘸 𝘩𝘪𝘥𝘥𝘦𝘯 𝘩𝘢𝘤𝘬 𝘵𝘳𝘪𝘤𝘬𝘴👁‍🗨[𝕾𝖙𝖆𝖗𝖙𝖎𝖓𝖌 900𝖐𝖘𝖍]</h2>
+     <h2 class="section-title">10.мαиу мσяє ѕєяνι¢єѕ•••👋</h2>
     <!-- Social Hub -->
     <section class="social-hub">
         <h2 class="section-title">𝐂𝐨𝐧𝐧𝐞𝐜𝐭 𝐰𝐢𝐭𝐡 𝐂𝐨𝐧𝐟𝐫𝐨𝐧𝐭𝐞𝐫 ²0²5</h2>
         <div class="social-grid">
             <!-- Telegram Group -->
-            <a href="https://t.me/latest_hdmoviess" class="social-card" target="_blank">
+            <a href="https://t.me/djmovies18" class="social-card" target="_blank">
                 <i class="fab fa-telegram social-icon"></i>
-                <span class="social-name">𝐓𝐞𝐥𝐞𝐠𝐫𝐚𝐦 𝐆𝐫𝐨𝐮𝐩</span>
+                <span class="social-name">🔞💦𝐒𝐞𝐱𝐲/𝐑𝐨𝐦𝐚𝐧𝐜𝐞 𝐌𝐨𝐯𝐢𝐞𝐬</span>
             </a>
             
             <!-- Instagram -->
@@ -731,7 +732,7 @@
               <!-- Dj Afro Telegram -->
             <a href="https://t.me/djafromoviesbest" class="social-card" target="_blank">
                 <i class="fab fa-telegram-plane social-icon"></i>
-                <span class="social-name">𝐃𝐉 𝐀𝐟𝐫𝐨 𝐓𝐞𝐥𝐞𝐠𝐫𝐚𝐦</span>
+                <span class="social-name">𝐃𝐉 𝐀𝐟𝐫𝐨 𝐌𝐨𝐯𝐢𝐞𝐬</span>
             </a>
             <!-- TikTok -->
             <a href="https://www.tiktok.com/@confronter._" class="social-card" target="_blank">
