--- a/index.html
+++ b/index.html
@@ -707,7 +707,8 @@
     <h2 class="section-title">7.𝘞𝘢𝘯𝘵 𝘵𝘰 𝘣𝘦 𝘥𝘦𝘱𝘭𝘰𝘺𝘦𝘳/𝘋𝘦𝘷𝘦𝘭𝘰𝘱𝘦𝘳 𝘩𝘪𝘵 𝘮𝘦📲</h2>
     <h2 class="section-title">8.𝘕𝘦𝘵𝘧𝘭𝘪𝘹 𝘱𝘳𝘦𝘮𝘪𝘶𝘮,𝘢𝘭𝘭 𝘢𝘱𝘱𝘴⌛[𝕾𝖙𝖆𝖗𝖙𝖎𝖓𝖌 100𝖐𝖘𝖍]</h2>
     <h2 class="section-title">9.𝘓𝘦𝘢𝘳𝘯 𝘕𝘦𝘸 𝘩𝘪𝘥𝘥𝘦𝘯 𝘩𝘢𝘤𝘬 𝘵𝘳𝘪𝘤𝘬𝘴👁‍🗨[𝕾𝖙𝖆𝖗𝖙𝖎𝖓𝖌 900𝖐𝖘𝖍]</h2>
-     <h2 class="section-title">10.мαиу мσяє ѕєяνι¢єѕ•••👋</h2>
+   <h2 class="section-title">10.𝘝𝘱𝘯 𝘧𝘪𝘭𝘦𝘴 𝘢𝘯𝘥 𝘧𝘳𝘦𝘦 𝘶𝘯𝘭𝘪𝘮𝘪𝘵𝘦𝘥 𝘯𝘦𝘵📡[𝕾𝖙𝖆𝖗𝖙𝖎𝖓𝖌 100𝖐𝖘𝖍]</h2> 
+     <h2 class="section-title">11.мαиу мσяє ѕєяνι¢єѕ•••👋</h2>
     <!-- Social Hub -->
     <section class="social-hub">
         <h2 class="section-title">𝐂𝐨𝐧𝐧𝐞𝐜𝐭 𝐰𝐢𝐭𝐡 𝐂𝐨𝐧𝐟𝐫𝐨𝐧𝐭𝐞𝐫 ²0²5</h2>
